--- a/src/main/resources/mcp-servers-config-local.json
+++ b/src/main/resources/mcp-servers-config-local.json
@@ -5,7 +5,7 @@
       "args": [
         "-Dspring.profiles.active=mcp-server-local",
         "-jar",
-        "./target/mcp-app-0.0.1-SNAPSHOT.jar"
+        "./target/chatbot-1.0.0.jar"
       ]
     }
   }
